修改user模块名为uac

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -37,9 +37,9 @@ spring:
           filters:
             - SwaggerHeaderFilter
         # user 模块
-        - id: apocalypse-user
-          uri: lb://apocalypse-user/
+        - id: apocalypse-uac
+          uri: lb://apocalypse-uac/
           predicates:
-            - Path=/user-api/**
+            - Path=/user/**
           filters:
             - SwaggerHeaderFilter
