--- a/system/system-app/pom.xml
+++ b/system/system-app/pom.xml
@@ -16,6 +16,11 @@
 
         <dependency>
             <groupId>com.apocalypse</groupId>
+            <artifactId>common-boot</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
             <artifactId>system-api</artifactId>
         </dependency>
 
