--- a/example/example-app/pom.xml
+++ b/example/example-app/pom.xml
@@ -31,9 +31,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
+            <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>0.2.2.RELEASE</version>
         </dependency>
 
         <dependency>
