--- a/example/example-app/pom.xml
+++ b/example/example-app/pom.xml
@@ -31,8 +31,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>system-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
         <dependency>
