--- a/example/example-app/src/main/resources/bootstrap.yml
+++ b/example/example-app/src/main/resources/bootstrap.yml
@@ -1,3 +1,10 @@
 logging:
   config: classpath:logback-spring.xml
   path: ./logs/
+spring:
+  cloud:
+    nacos:
+      config:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: apocalypse-example
