--- a/example/pom.xml
+++ b/example/pom.xml
@@ -17,6 +17,7 @@
         <module>example-app</module>
         <module>example-api</module>
         <module>example-drools</module>
+        <module>example-geek</module>
     </modules>
 
     <dependencies>
