--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,11 @@
         <!-- 七牛云SDK -->
         <qiniu-java-sdk.version>7.2.2</qiniu-java-sdk.version>
         <!-- 支付宝SDK -->
-        <alipay-sdk-java.version>3.7.73.ALL</alipay-sdk-java.version>
+        <alipay-sdk-java.version>4.9.28.ALL</alipay-sdk-java.version>
         <!-- WebSocket 客户端 -->
         <Java-WebSocket.version>1.4.0</Java-WebSocket.version>
+        <!-- hadoop 客户端 -->
+        <hadoop.version>3.2.1</hadoop.version>
 
         <!-- 分布式服务部分 -->
         <!-- 分布式锁工具 https://github.com/redisson/redisson#quick-start -->
@@ -245,6 +247,30 @@
                 <groupId>org.java-websocket</groupId>
                 <artifactId>Java-WebSocket</artifactId>
                 <version>${Java-WebSocket.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-common</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-hdfs</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>3.3.3</version>
             </dependency>
 
             <dependency>
