--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,18 @@
         <module>gateway</module>
         <module>example</module>
         <module>system</module>
+        <module>sidecar</module>
     </modules>
 
     <packaging>pom</packaging>
     <name>apocalypse-parent</name>
 
-    <parent>
+   <!-- <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.2.0.RELEASE</version>
         <relativePath/>
-    </parent>
+    </parent>-->
 
     <properties>
         <!-- 编译属性 -->
@@ -35,10 +36,11 @@
         <!-- 基础框架 -->
         <!-- Spring Boot -->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
-        <spring-cloud-dependencies.version>Greenwich.SR2</spring-cloud-dependencies.version>
-        <spring-cloud-alibaba-dependencies.version>2.1.0.RELEASE</spring-cloud-alibaba-dependencies.version>
+        <spring-cloud.version>Hoxton.SR2</spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.0.RELEASE</spring-cloud-alibaba.version>
+
         <!-- api 构建工具 https://github.com/swagger-api/swagger-core/wiki/ -->
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <swagger-models.version>1.5.21</swagger-models.version>
@@ -46,6 +48,7 @@
         <swagger-bootstrap-ui.version>1.9.4</swagger-bootstrap-ui.version>
 
         <!-- 数据库部分 -->
+        <mysql.version>8.0.18</mysql.version>
         <mapper.version>3.4.2</mapper.version>
         <pagehelper.version>5.1.8</pagehelper.version>
         <mybatis-spring-boot-starter.version>2.1.0</mybatis-spring-boot-starter.version>
@@ -125,9 +128,23 @@
             </dependency>
 
             <dependency>
+                <groupId>com.apocalypse</groupId>
+                <artifactId>sidecar-node-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud-dependencies.version}</version>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -135,7 +152,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>${spring-cloud-alibaba-dependencies.version}</version>
+                <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
