--- a/pom.xml
+++ b/pom.xml
@@ -365,7 +365,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-<!--                            <version>${lombok.version}</version>-->
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
