OAuth2 多个授权服务商并存（GitHub + DingTalk）

--- a/common/apocalypse-boot/pom.xml
+++ b/common/apocalypse-boot/pom.xml
@@ -12,18 +12,19 @@
     <artifactId>apocalypse-boot</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.apocalypse</groupId>
             <artifactId>apocalypse-util</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>com.apocalypse</groupId>
             <artifactId>apocalypse-core</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
-
 
 </project>
