--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -14,6 +14,12 @@
     <name>gateway</name>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-boot</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -38,12 +44,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-
     </dependencies>
 
     <build>
