--- a/common/apocalypse-data/apocalypse-data-redis/pom.xml
+++ b/common/apocalypse-data/apocalypse-data-redis/pom.xml
@@ -12,15 +12,19 @@
     <artifactId>apocalypse-data-redis</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.apocalypse</groupId>
             <artifactId>apocalypse-util</artifactId>
-            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
