--- a/example/example-app/pom.xml
+++ b/example/example-app/pom.xml
@@ -17,7 +17,27 @@
 
         <dependency>
             <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-data-mybatis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
             <artifactId>apocalypse-boot</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-util</artifactId>
         </dependency>
 
         <dependency>
@@ -200,7 +220,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.8.RELEASE</version>
+                <version>2.3.4.RELEASE</version>
             </plugin>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
