--- a/example/example-app/src/main/resources/redisson/redisson-dev.yaml
+++ b/example/example-app/src/main/resources/redisson/redisson-dev.yaml
@@ -1,3 +1,4 @@
 singleServerConfig:
   address: "redis://127.0.0.1:6379"
+  database: 7
 codec: !<com.apocalypse.common.data.redis.redisson.codec.CustomJsonJacksonCodec> {}
