--- a/example/pom.xml
+++ b/example/pom.xml
@@ -21,12 +21,8 @@
     <dependencies>
         <dependency>
             <groupId>com.apocalypse</groupId>
-            <artifactId>apocalypse-all</artifactId>
+            <artifactId>apocalypse-core</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
     </dependencies>
 </project>
