--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>example</module>
         <module>gateway</module>
         <module>idaas</module>
+        <module>cms</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -34,14 +35,10 @@
         <!-- 基础框架 -->
         <!-- Spring Boot -->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
-        <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
+        <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
-        <spring-cloud.version>Hoxton.SR2</spring-cloud.version>
-        <spring-cloud-alibaba.version>2.2.0.RELEASE</spring-cloud-alibaba.version>
-
-        <!-- api 构建工具 https://github.com/swagger-api/swagger-core/wiki/ -->
-        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
-        <swagger-models.version>1.5.21</swagger-models.version>
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
 
         <!-- 数据库部分 -->
         <mysql.version>8.0.18</mysql.version>
@@ -53,7 +50,7 @@
         <!-- 分页插件 -->
         <pagehelper-spring-boot-starter.version>1.2.11</pagehelper-spring-boot-starter.version>
         <!-- 数据库连接池 -->
-        <druid-spring-boot-starter.version>1.1.17</druid-spring-boot-starter.version>
+        <druid-spring-boot-starter.version>1.1.23</druid-spring-boot-starter.version>
         <sharding-sphere.version>4.0.0-RC1</sharding-sphere.version>
 
         <!-- 工具部分 -->
@@ -85,6 +82,8 @@
         <!-- 数据模拟工具 https://github.com/DiUS/java-faker/ -->
         <javafaker.version>0.18</javafaker.version>
 
+        <javassist.version>3.18.1-GA</javassist.version>
+
         <!-- 插件部分 -->
         <lombok.version>1.18.10</lombok.version>
         <checkstyle.config.location>check-style.xml</checkstyle.config.location>
@@ -96,13 +95,27 @@
         <dependencies>
             <dependency>
                 <groupId>com.apocalypse</groupId>
-                <artifactId>apocalypse-all</artifactId>
+                <artifactId>apocalypse-boot</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.apocalypse</groupId>
-                <artifactId>apocalypse-boot</artifactId>
+                <artifactId>apocalypse-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.apocalypse</groupId>
+                <artifactId>apocalypse-data-mybatis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.apocalypse</groupId>
+                <artifactId>apocalypse-data-redis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.apocalypse</groupId>
+                <artifactId>apocalypse-util</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -147,25 +160,6 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid-spring-boot-starter.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${springfox-swagger2.version}</version>
-                <!-- 解决Springfox-Swagger 2.9.2版本NumberFormatException异常,先排除，再导入，导入的版本有所升级 -->
-                <exclusions>
-                    <exclusion>
-                        <groupId>io.swagger</groupId>
-                        <artifactId>swagger-models</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-
-            <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-models</artifactId>
-                <version>${swagger-models.version}</version>
             </dependency>
 
             <dependency>
@@ -290,11 +284,6 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool-all.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-models</artifactId>
         </dependency>
 
         <!-- 工具 lombok https://projectlombok.org/features/all -->
