--- a/idaas/idaas-app/src/main/resources/application-dev.yml
+++ b/idaas/idaas-app/src/main/resources/application-dev.yml
@@ -1,4 +1,4 @@
-#debug: true
+debug: true
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
     port: 6379
     timeout: 10000ms
     redisson:
-      config: "classpath:/redisson/redisson-dev.yaml"
+      file: classpath:/redisson/redisson-dev.yaml
   cloud:
     inetutils:
       ignored-interfaces: #忽略docker0网卡以及 veth开头的网卡
@@ -28,16 +28,3 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
-    listener:
-      simple:
-        # 手动ACK 不开启自动ACK模式，目的是防止报错后未正确处理消息丢失，默认 为 none
-        acknowledge-mode: manual
-  cache:
-    type: redis
-    redis:
-      time-to-live: 300000ms
