调整配置文件名

--- a/cms/cms-app/src/main/resources/application-dev.yml
+++ b/cms/cms-app/src/main/resources/application-dev.yml
@@ -1,4 +1,5 @@
 debug: true
+
 spring:
   security:
     oauth2:
@@ -26,6 +27,7 @@ spring:
             redirectUri: "{baseUrl}/call/{action}/oauth2/code/{registrationId}"
             scope:
               - me
+              - mobile
         provider:
           dingtalk:
             # https://oapi.dingtalk.com/connect/qrconnect?appid=APPID&response_type=code&scope=snsapi_login&state=STATE&redirect_uri=REDIRECT_URI
@@ -81,3 +83,5 @@ spring:
     type: redis
     redis:
       time-to-live: 300000ms
+  thymeleaf:
+    cache: false
