--- a/cms/cms-app/pom.xml
+++ b/cms/cms-app/pom.xml
@@ -44,7 +44,10 @@
             <groupId>com.apocalypse</groupId>
             <artifactId>idaas-api</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.alibaba.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
@@ -59,6 +62,8 @@
 <!--            <groupId>com.alibaba.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>-->
 <!--        </dependency>-->
+
+
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
