--- a/idaas/idaas-app/src/main/resources/application-dev.yml
+++ b/idaas/idaas-app/src/main/resources/application-dev.yml
@@ -28,3 +28,7 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+knife4j:
+  production: false
+  setting:
+    enableAfterScript: true
