--- a/example/example-app/src/main/resources/application-dev.yml
+++ b/example/example-app/src/main/resources/application-dev.yml
@@ -1,4 +1,8 @@
 debug: true
+logging:
+  config: classpath:logback-spring.xml
+  file:
+    path: ./logs/
 security:
   oauth2:
     resource:
@@ -33,6 +37,7 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+
   rabbitmq:
     host: 127.0.0.1
     port: 5672
@@ -99,3 +104,8 @@ spring:
     props:
       sql:
         show: false
+rocketmq:
+  name-server: 127.0.0.1:9876
+  producer:
+    group: my-group
+
